--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>css-3dÐý×ª</title>
+        <title>è‡­78</title>
         <link rel="stylesheet" href="css/index.css" />
     </head>
     <body>
-        <!--/*Íâ²ã×î´óÈÝÆ÷*/-->
+        <!--/*å¤–å±‚æœ€å¤§å®¹å™¨*/-->
         <div class="wrap">
-    <!--    /*°ü¹üËùÓÐÔªËØµÄÈÝÆ÷*/-->
+    <!--    /*åŒ…è£¹æ‰€æœ‰å…ƒç´ çš„å®¹å™¨*/-->
         <div class="cube">
-            <!--Ç°ÃæÍ¼Æ¬ -->
+            <!--å‰é¢å›¾ç‰‡ -->
             <div class="out_front">
                 <img src="img/1.jpg"  class="pic"/>
             </div>
-            <!--ºóÃæÍ¼Æ¬ -->
+            <!--åŽé¢å›¾ç‰‡ -->
             <div class="out_back">
                 <img src="img/2.jpg"  class="pic"/>
             </div>
-            <!--×óÍ¼Æ¬ -->
+            <!--å·¦å›¾ç‰‡ -->
             <div class="out_left">
                 <img src="img/3.jpg"  class="pic"/>
             </div>
@@ -31,7 +31,7 @@
             <div class="out_bottom">
                 <img src="img/6.jpg"  class="pic"/>
             </div>
-            <!--Ð¡Õý·½Ìå --> 
+            <!--å°æ­£æ–¹ä½“ --> 
             <span class="in_front">
                 <img src="img/7.jpg" class="in_pic" />
             </span>
